# novel_reader

./: .gitignore  PLAN.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src/pages/: LibraryView.vue  ReaderView.vue
src/router/: index.js
src/services/: bookUtils.js  libraryService.js  readerService.js
src/stores/: library.js  reader.js
